Fix font alignment, size, and color.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,14 +18,22 @@ h3 {
 p {
   font-size: 14px;
 }
-#footer {
+.footer {
   text-align: left;
   color: white;
   background-color: dimgray;
+  font-size: 11px;
 }
 .flatiron {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
 a {
+  color: white;
+  font-size: 18px;
+}
+a.footer {
+  font-size: 18px;
+}
+h3.flatiron {
   color: white;
 }
